--- a/NerdAmigo.Abstractions.csproj
+++ b/NerdAmigo.Abstractions.csproj
@@ -39,10 +39,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IConfigurationProvider.cs" />
     <Compile Include="IPathMapper.cs" />
+    <Compile Include="IQueueClient.cs" />
+    <Compile Include="IQueueIdentifierProvider.cs" />
+    <Compile Include="IQueueMessageWorker.cs" />
+    <Compile Include="IQueueMessageWorkerActivator.cs" />
+    <Compile Include="LogEntry.cs" />
+    <Compile Include="LogEventSeverity.cs" />
+    <Compile Include="Default\DefaultLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ILogger.cs" />
-    <Compile Include="ILogLevel.cs" />
+    <Compile Include="Identifier.cs" />
+    <Compile Include="IQueueMessage.cs" />
+    <Compile Include="QueueMessageIdentifier.cs" />
+    <Compile Include="QueueIdentifier.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
