--- a/NerdAmigo.Abstractions.csproj
+++ b/NerdAmigo.Abstractions.csproj
@@ -40,7 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IConfigurationProvider.cs" />
+    <Compile Include="IEnvironmentNameResolver.cs" />
+    <Compile Include="IFileStorageItemInfo.cs" />
+    <Compile Include="IFileStorableObject.cs" />
+    <Compile Include="IFileStorageProvider.cs" />
+    <Compile Include="IHostNameResolver.cs" />
     <Compile Include="IPathMapper.cs" />
+    <Compile Include="IPaymentProcessor.cs" />
+    <Compile Include="IPaymentTransactionResult.cs" />
+    <Compile Include="IPayment.cs" />
+    <Compile Include="IPaymentMethod.cs" />
     <Compile Include="IQueueClient.cs" />
     <Compile Include="IQueueIdentifierProvider.cs" />
     <Compile Include="IQueueMessageWorker.cs" />
@@ -48,6 +57,7 @@
     <Compile Include="LogEntry.cs" />
     <Compile Include="LogEventSeverity.cs" />
     <Compile Include="Default\DefaultLogger.cs" />
+    <Compile Include="PaymentTransactionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="Identifier.cs" />
